dependencies:
${MIRROR_WGET}/download_package ftp.pir.georgetown.edu.proisoform 
${MIRROR_WGET}/download_package pir.georgetown.edu.proisoform 
${MIRROR_WGET}/download_package build.berkeleybop.org.goload 
${MIRROR_WGET}/download_package build.berkeleybop.org.gpad.goload 
${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload 
${MIRROR_WGET}/download_package ftp.geneontology.org.goload 

TAG: goload-6-0-11-2
DATE: 10/11/2017
STAFF: sc
CHANGES: 
1. goamouse/goamouse.config.default remove ANNOTPOSTFILE
2. goamouse/goamouse.sh - remove call to goamousepost.py
3. goamouse/goamousepost.py - removed this script

TAG: goload-6-0-11-1
DATE: 10/11/2017
STAFF: sc
CHANGES: merge tr12624 to master
1) go.sh - add call to  BIB_updateWFStatusGO
2) don't create annotations when uniprot ID associated with multi markers

TAG: goload-tr12624-BP
DATE: 09/29/2017
STAFF: sc
CHANGES: Branch point tag for tr12646 Tweak to GOA mouse load related to TR12624

TAG: goload-6-0-7-3
DATE: 01/23/2017
STAFF: lec 
CHANGES:
1) TR11938/goamouse/goamousepost.py/autoindex marker/autoselect reference

TAG: goload-6-0-7-1
TAG: goload-6-0-7-2
DATE: 01/05/2017, 01/09/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: goload-6-0-6-11
DATE: 12/19/2016
STAFF: lec 
CHANGES:
TR12486/lib/ecolib.py/new eco file

TAG: goload-6-0-6-10
TAG: goload-6-0-6-9
DATE: 12/08/2016
STAFF: lec 
CHANGES:
TR11938/goamouse/autoindex marker/autoselect reference
new: goamousepost.py

TAG: goload-6-0-6-8
DATE: 12/08/2016
STAFF: lec 
CHANGES:
TR12474/gocfp/gocfp.config.default change

TAG: goload-6-0-6-7
DATE: 11/30/2016
STAFF: lec 
CHANGES:
goamouse - use lib/ubersonlib.py

TAG: goload-6-0-6-6
DATE: 11/29/2016
STAFF: lec 
CHANGES:
lib/uberonlib.py fix

TAG: goload-6-0-6-5
DATE: 11/09/2016
STAFF: lec 
CHANGES:
fix gorefgen/index.html

TAG: goload-6-0-6-4
TAG: goload-6-0-6-3
TAG: goload-6-0-6-2
TAG: goload-6-0-6-1
DATE: 09/12/2016
STAFF: lec 
CHANGES:
TR12345/GO-Noctua/GPAD/GPI